css/portfolio_style.css
.navbar{
    background: linear-gradient(to right,black,#080320,black);
    box-shadow: 0px 2px 2px black;
}

ul li.nav-item:hover {
    transition: transform .2s;
    transform: scale(1.2);
}

ul li.nav-item{
    font-weight:bold;
}

body {
    display: none;
	background-color: black;
	background: linear-gradient(to right,black,#080320,black);
	margin-top: 70px;
}

h1 {
	font-family: Georgia, sans-serif;
	font-style: italic;
	color: #4242f4;
	text-shadow: 2px 2px 5px white,
	2px 8px 6px rgba(0,0,0,0.5),
    100px 1px 200px rgba(255,255,255),
    2px 8px 6px rgba(0,0,0,.5), 
    -100px 1px 200px rgba(255,255,255);
}

h2 {
	text-align: center;
	color: #4242f4;
	text-shadow: 2px,2px;
}

h4{
    color: black;
    font-family: Georgia, sans-serif;
    text-shadow: 1px 1px 1px white,
        -1px -1px 1px white;
}

.lead {
	color: #fff966;
	font-family: Great Vibes, Cursive;
    text-shadow: 2px 8px 6px rgba(0,0,0,0.5),
    0px -5px 35px rgba(255,255,255);
}

.navbar {
	background: linear-gradient(black,darkblue,black,black;)
	color: blue;
}

.jumbotron {
	background: linear-gradient(to right,black,#080320,black);
}

.card_color {
	background: linear-gradient(to right,black,#91bde0,black);
}

.container{
    position: relative;
}

#credit-box{
    position: relative;
}

.container_pic1 {
	margin: 0;
	width: 100%;
	height: 300px;
}

.credit {
    position: relative;
    bottom: 24px;
    left: 16px;
    font-size: 14px;
    color: #4242f4;
}

.card-img-top {
	width: 140px;
	height: 140px;
	margin: 0 auto;
	background-color: #91bde0;
    box-shadow: 20px 0px 20px,
    -20px 0px 20px;
}

.flex-container {
    display: flex;
    justify-content: center;
}

.badge{
    background-color: #080320;
    box-shadow: 0px 0px 5px #91bde0;
    margin: 0 5px;
}

.btn:hover {
	cursor: pointer;
}

.btn-group * {
    padding: 0 10px;
    color: #fff966;
}

.btn {
    background: linear-gradient(to right,black,#2B3843,black);
}

#box {
    height: 50px;
    
}

footer {
    color: #fff966;
    position: fixed;
    bottom: 0;
    right: 5px;
}

